test/libyul/yulSyntaxTests/for_statement_continue_nested_init_in_body.yul
{
	for {} 1 {}
	{
		let x
		for { continue } x {} {}
	}
}
// ----
// SyntaxError 9615: (34-42): Keyword "continue" in for-loop init block is not allowed.
